--- a/src/css/typography.css
+++ b/src/css/typography.css
@@ -149,7 +149,7 @@ h3 {
     @apply .text-gray-300 .mb-8 .font-audiowide .font-bold .tracking-wider;
 }
 
-p, li:not([class*="menu-item"]) {
+p, div, li:not([class*="menu-item"]) {
     @apply .text-wp-blue-cosmic .tracking-wide;
     font-size-responsive: 1.2rem 1.3rem 1680px 1920px;
     font-size-responsive: 0.9rem 1.2rem 320px 1680px;
