--- a/src/css/typography.css
+++ b/src/css/typography.css
@@ -64,14 +64,14 @@
 
 .main-container {
     @apply .mx-auto;
-    width: 1600px;
+    width: 1400px;
 }
 
-@media (max-width: 1920px) {
-    .main-container {
-        max-width: 1400px;
-    }
-}
+/*@media (max-width: 1920px) {*/
+/*    .main-container {*/
+/*        max-width: 1400px;*/
+/*    }*/
+/*}*/
 
 @media (max-width: 1680px) {
     .main-container {
